@@ -23,15 +23,15 @@ BUILD_BOUNDED="@bounded@"
 BUILD_STATIC_NSS="@static_nss@"
 STDIO="@stdio@"
 
-TEMP=`mktemp -q /tmp/glibcbugXXXXXX 2>/dev/null`
+TEMP=`mktemp -q ${TMPDIR-/tmp}/glibcbugXXXXXX 2>/dev/null`
 if test $? -ne 0; then
-  TEMP=/tmp/glibcbug.$$
+  TEMP={$TMPDIR-/tmp}/glibcbug.$$
   echo > $TEMP
   chmod 600 $TEMP
 fi
-TEMPx=`mktemp -q /tmp/glibcbugXXXXXX 2>/dev/null`
+TEMPx=`mktemp -q ${TMPDIR-/tmp}/glibcbugXXXXXX 2>/dev/null`
 if test $? -ne 0; then
-  TEMPx=/tmp/glibcbug.$$.x
+  TEMPx=${TMPDIR-/tmp}/glibcbug.$$.x
   echo > $TEMPx
   chmod 600 $TEMPx
 fi
