@@ -271,8 +271,8 @@ mon     "<U006A><U0061><U006E><U0075><U0061><U0072>";/
         "<U006D><U0061><U0072><U0074>";/
         "<U0061><U0070><U0072><U0069><U006C>";/
         "<U006D><U0061><U006A>";/
-        "<U006A><U0075><U006E>";/
-        "<U006A><U0075><U006C>";/
+        "<U006A><U0075><U006E><U0069>";/
+        "<U006A><U0075><U006C><U0069>";/
         "<U0061><U0076><U0067><U0075><U0073><U0074>";/
         "<U0073><U0065><U0070><U0074><U0065><U006D><U0062><U0061><U0072>";/
         "<U006F><U006B><U0074><U006F><U0062><U0061><U0072>";/
